[task] prepared auth server for ldap authentication
- added spring security ldap dependency
- updated login template for login modus switch (normal, ldap)
- added test file for ledap server emulation

--- a/defaultConfiguration/auth-server/locale/login.properties
+++ b/defaultConfiguration/auth-server/locale/login.properties
@@ -4,6 +4,8 @@ login.username=Username
 login.password=Password
 login.signin=Sign in
 login.error=Wrong username or password
+login.modus.normal=Normal login
+login.modus.ldap=Login with LDAP
 
 confirmation.title=Access confirmation
 confirmation.headline=Please confirm
