--- a/defaultConfiguration/auth-server/locale/login_de_DE.properties
+++ b/defaultConfiguration/auth-server/locale/login_de_DE.properties
@@ -4,6 +4,8 @@ login.username=Benutzername
 login.password=Passwort
 login.signin=Anmelden
 login.error=Falscher Benutzername oder Passwort
+login.modus.normal=Normaler login
+login.modus.ldap=Login mit LDAP
 
 confirmation.title=Zugriffsbestätigung
 confirmation.headline=Bitte bestätigen
