[task] updated ldap user to scim user mapping

--- a/defaultConfiguration/auth-server/locale/login.properties
+++ b/defaultConfiguration/auth-server/locale/login.properties
@@ -4,7 +4,7 @@ login.username=Username
 login.password=Password
 login.signin=Sign in
 login.error=Wrong username or password
-login.modus.normal=Normal login
+login.modus.internal=Internal login
 login.modus.ldap=Login with LDAP
 
 confirmation.title=Access confirmation
